--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+      "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+      "node_modules/bootstrap/dist/css/bootstrap.min.css"
+   
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+             
+            ]
           },
           "configurations": {
             "production": {
@@ -88,9 +95,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "../node_modules/jquery/dist/jquery.min.js",
+             "../node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         },
         "lint": {
@@ -119,6 +130,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angularproject"
+    }
+  },
+  "defaultProject": "angularproject",
+  "cli": {
+    "analytics": false
+  }
 }
